# feel

./: README.md  go  index.html  main.css  manage.py  pyproject.toml
components/templates/cotton/: button.html  card.html  heading.html  menu.html  pill.html
feel/: asgi.py  settings.py  urls.py  wsgi.py
feel/settings/: base.py  local.py  test.py
journal/: forms.py  models.py  urls.py  views.py
journal/migrations/: 0001_initial.py  0002_alter_trigger_id.py
journal/static/journal/css/: main.css
journal/templates/journal/: index.html
journal/templates/journal/entry/: new_entry.html  select_triggers.html
journal/templates/journal/feelings/: good.html
journal/tests/: conftest.py  test_forms.py  test_new_entry_view.py  test_select_triggers_view.py
public/: urls.py  views.py
public/templates/public/: landing_page.html
templates/allauth/elements/: button.html  h1.html  provider.html  provider_list.html
templates/allauth/layouts/: base.html
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
theme/templates/: base.html
