[project]
name = "feel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-allauth[socialaccount]>=65.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.13.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "feel.settings.base"
