[project]
name = "feel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-allauth[socialaccount]>=65.11.2",
    "django-cotton>=2.1.3",
    "django-tailwind[reload]>=4.2.0",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "honcho>=2.0.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.13.3",
    "unbrowsed>=0.1.0a22",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "feel.settings.test"
